# LAPACK

./: CMakeClean  CMakeLists.txt  README
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/flapackd/: CMakeLists.txt
src/lib/flapackz/: CMakeLists.txt
