# ==============================================================================
# LAPACK CMake File
# ==============================================================================

# objects in library -----------------------------------------------------------
SET(FLAPACKZ_SRC
        zbdsqr.f
        zcgesv.f
        zdrscl.f
        zgbbrd.f
        zgbcon.f
        zgbequ.f
        zgbrfs.f
        zgbsv.f
        zgbsvx.f
        zgbtf2.f
        zgbtrf.f
        zgbtrs.f
        zgebak.f
        zgebal.f
        zgebd2.f
        zgebrd.f
        zgecon.f
        zgeequ.f
        zgees.f
        zgeesx.f
        zgeev.f
        zgeevx.f
        zgegs.f
        zgegv.f
        zgehd2.f
        zgehrd.f
        zgelq2.f
        zgelqf.f
        zgelsd.f
        zgels.f
        zgelss.f
        zgelsx.f
        zgelsy.f
        zgeql2.f
        zgeqlf.f
        zgeqp3.f
        zgeqpf.f
        zgeqr2.f
        zgeqrf.f
        zgerfs.f
        zgerq2.f
        zgerqf.f
        zgesc2.f
        zgesdd.f
        zgesvd.f
        zgesv.f
        zgesvx.f
        zgetc2.f
        zgetf2.f
        zgetrf.f
        zgetri.f
        zgetrs.f
        zggbak.f
        zggbal.f
        zgges.f
        zggesx.f
        zggev.f
        zggevx.f
        zggglm.f
        zgghrd.f
        zgglse.f
        zggqrf.f
        zggrqf.f
        zggsvd.f
        zggsvp.f
        zgtcon.f
        zgtrfs.f
        zgtsv.f
        zgtsvx.f
        zgttrf.f
        zgttrs.f
        zgtts2.f
        zhbevd.f
        zhbev.f
        zhbevx.f
        zhbgst.f
        zhbgvd.f
        zhbgv.f
        zhbgvx.f
        zhbtrd.f
        zhecon.f
        zheevd.f
        zheev.f
        zheevr.f
        zheevx.f
        zhegs2.f
        zhegst.f
        zhegvd.f
        zhegv.f
        zhegvx.f
        zherfs.f
        zhesv.f
        zhesvx.f
        zhetd2.f
        zhetf2.f
        zhetrd.f
        zhetrf.f
        zhetri.f
        zhetrs.f
        zhgeqz.f
        zhpcon.f
        zhpevd.f
        zhpev.f
        zhpevx.f
        zhpgst.f
        zhpgvd.f
        zhpgv.f
        zhpgvx.f
        zhprfs.f
        zhpsv.f
        zhpsvx.f
        zhptrd.f
        zhptrf.f
        zhptri.f
        zhptrs.f
        zhsein.f
        zhseqr.f
        zlabrd.f
        zlacgv.f
        zlacn2.f
        zlacon.f
        zlacp2.f
        zlacpy.f
        zlacrm.f
        zlacrt.f
        zladiv.f
        zlaed0.f
        zlaed7.f
        zlaed8.f
        zlaein.f
        zlaesy.f
        zlaev2.f
        zlag2c.f
        zlags2.f
        zlagtm.f
        zlahef.f
        zlahqr.f
        zlahr2.f
        zlahrd.f
        zlaic1.f
        zlals0.f
        zlalsa.f
        zlalsd.f
        zlangb.f
        zlange.f
        zlangt.f
        zlanhb.f
        zlanhe.f
        zlanhp.f
        zlanhs.f
        zlanht.f
        zlansb.f
        zlansp.f
        zlansy.f
        zlantb.f
        zlantp.f
        zlantr.f
        zlapll.f
        zlapmt.f
        zlaqgb.f
        zlaqge.f
        zlaqhb.f
        zlaqhe.f
        zlaqhp.f
        zlaqp2.f
        zlaqps.f
        zlaqr0.f
        zlaqr1.f
        zlaqr2.f
        zlaqr3.f
        zlaqr4.f
        zlaqr5.f
        zlaqsb.f
        zlaqsp.f
        zlaqsy.f
        zlar1v.f
        zlar2v.f
        zlarcm.f
        zlarfb.f
        zlarf.f
        zlarfg.f
        zlarft.f
        zlarfx.f
        zlargv.f
        zlarnv.f
        zlarrv.f
        zlartg.f
        zlartv.f
        zlarzb.f
        zlarz.f
        zlarzt.f
        zlascl.f
        zlaset.f
        zlasr.f
        zlassq.f
        zlaswp.f
        zlasyf.f
        zlatbs.f
        zlatdf.f
        zlatps.f
        zlatrd.f
        zlatrs.f
        zlatrz.f
        zlatzm.f
        zlauu2.f
        zlauum.f
        zpbcon.f
        zpbequ.f
        zpbrfs.f
        zpbstf.f
        zpbsv.f
        zpbsvx.f
        zpbtf2.f
        zpbtrf.f
        zpbtrs.f
        zpocon.f
        zpoequ.f
        zporfs.f
        zposv.f
        zposvx.f
        zpotf2.f
        zpotrf.f
        zpotri.f
        zpotrs.f
        zppcon.f
        zppequ.f
        zpprfs.f
        zppsv.f
        zppsvx.f
        zpptrf.f
        zpptri.f
        zpptrs.f
        zptcon.f
        zpteqr.f
        zptrfs.f
        zptsv.f
        zptsvx.f
        zpttrf.f
        zpttrs.f
        zptts2.f
        zrot.f
        zspcon.f
        zspmv.f
        zspr.f
        zsprfs.f
        zspsv.f
        zspsvx.f
        zsptrf.f
        zsptri.f
        zsptrs.f
        zstedc.f
        zstegr.f
        zstein.f
        zstemr.f
        zsteqr.f
        zsycon.f
        zsymv.f
        zsyr.f
        zsyrfs.f
        zsysv.f
        zsysvx.f
        zsytf2.f
        zsytrf.f
        zsytri.f
        zsytrs.f
        ztbcon.f
        ztbrfs.f
        ztbtrs.f
        ztgevc.f
        ztgex2.f
        ztgexc.f
        ztgsen.f
        ztgsja.f
        ztgsna.f
        ztgsy2.f
        ztgsyl.f
        ztpcon.f
        ztprfs.f
        ztptri.f
        ztptrs.f
        ztrcon.f
        ztrevc.f
        ztrexc.f
        ztrrfs.f
        ztrsen.f
        ztrsna.f
        ztrsyl.f
        ztrti2.f
        ztrtri.f
        ztrtrs.f
        ztzrqf.f
        ztzrzf.f
        zung2l.f
        zung2r.f
        zungbr.f
        zunghr.f
        zungl2.f
        zunglq.f
        zungql.f
        zungqr.f
        zungr2.f
        zungrq.f
        zungtr.f
        zunm2l.f
        zunm2r.f
        zunmbr.f
        zunmhr.f
        zunml2.f
        zunmlq.f
        zunmql.f
        zunmqr.f
        zunmr2.f
        zunmr3.f
        zunmrq.f
        zunmrz.f
        zunmtr.f
        zupgtr.f
        zupmtr.f
        dzsum1.f
        cgetrf.f
        cgetrs.f
        claswp.f
        izmax1.f
        clag2z.f
        cgetf2.f
        slamch.f
        )

# create static library --------------------------------------------------------
IF(LIBS_STATIC)
    ADD_LIBRARY(flapackz_static STATIC ${FLAPACKZ_SRC})
    SET_TARGET_PROPERTIES(flapackz_static PROPERTIES
                            OUTPUT_NAME flapackz
                            CLEAN_DIRECT_OUTPUT 1)
ENDIF(LIBS_STATIC)

# create shared library --------------------------------------------------------
IF(LIBS_SHARED)
    ADD_LIBRARY(flapackz_shared SHARED ${FLAPACKZ_SRC})
    SET_TARGET_PROPERTIES(flapackz_shared PROPERTIES
                            OUTPUT_NAME flapackz
                            CLEAN_DIRECT_OUTPUT 1
                            VERSION ${LAPACK_VERSION})
                            
    ADD_DEPENDENCIES(flapackz_shared flapackd_shared)
    TARGET_LINK_LIBRARIES(flapackz_shared
                        flapackd_shared ${BLASZ_LIB_NAME} ${BLASD_LIB_NAME})
                        
    INSTALL(TARGETS flapackz_shared
            DESTINATION lib)
ENDIF(LIBS_SHARED)

